# cheder

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/hooks/: build-install.sh
data/: cheder.desktop  icons.qrc
src/: action.h  actionbar.cpp  actionbar.h  actionpalette.cpp  actionpalette.h  actionwidgets.h  copymoveaction.cpp  copymoveaction.h  filelistmodel.h  imagedir.h  imageio.h  imageview.cpp  imageview.h  infopanel.cpp  infopanel.h  keydispatcher.cpp  keydispatcher.h  main.cpp  mainwindow.cpp  mainwindow.h  metadatareader.cpp  metadatareader.h  resizeaction.cpp  resizeaction.h  rotateaction.cpp  rotateaction.h  thumbnailcache.cpp  thumbnailcache.h  thumbnailview.cpp  thumbnailview.h
src/actions/: action.cpp  action.h  actionbar.cpp  actionbar.h  actionlogger.h  actionpane.cpp  actionpane.h  actionregistry.cpp  actionregistry.h  actionwidgets.h  animationaction.cpp  animationaction.h  annotateaction.cpp  annotateaction.h  captionaction.cpp  captionaction.h  concatenateaction.cpp  concatenateaction.h  copymoveaction.cpp  copymoveaction.h  cropaction.cpp  cropaction.h  gridaction.cpp  gridaction.h  renameaction.cpp  renameaction.h  resizeaction.cpp  resizeaction.h  rotateaction.cpp  rotateaction.h  writetarget.cpp  writetarget.h
